Stylesheet fixes
Removed unused scrollbar for firefox and added Definition environment 
for mathjax

--- a/_sass/main.scss
+++ b/_sass/main.scss
@@ -237,12 +237,15 @@ nav a:hover {
 .main-card {
 	align-self: stretch;
 
-	width: 70%;
+	width: 65%;
     flex-grow: 0;
 
 	margin-left: 0;
 	margin-right: auto;
-	padding: 20px;
+	padding-left: 40px;
+  padding-right: 40px;
+  padding-top: 20px;
+  padding-bottom: 20px;
 
 	box-sizing: border-box;
 
